# AGENTIC_3.0_Live-Class-2026

Class 4 - Agents in Python/Project 0/: .env  _01_ai_model_vs_chatbot_vs_agent.py  _02_calling_the_ai_paid_and_free.py  _03_structuring_with_pydantic.py  _04_giving_it_a_tool.py  _05_teaching_it_to_choose.py  _06_project_zero_agent.py
Class 7 - Langchain/Langchain Practical/langchain-course/: pyproject.toml  requirements.txt
Class 7 - Langchain/Langchain Practical/langchain-course/Learning/Part 1  - Environment Setup/: commands.txt  setup_check.ipynb
Class 7 - Langchain/Notebook For Reference/: 02_03_environment_models_messages_student_notes.ipynb
class2v2/: pyproject.toml
