[project]
name = "langchain-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.14",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
]
